crates/agglayer/src/snapshots/agglayer__migrate_report__tests__migration_report_markdown_epoch_discovery_error.snap
---
source: crates/agglayer/src/migrate_report.rs
expression: render_markdown(&o)
---
## mainnet

Migration run at 2024-01-15 12:31:36 UTC, total 1.23s. Status: **FAILED**.

| Store | Status | Duration | Notes |
|---|---|---:|---|
| state | ✅ OK | 120.00ms | — |
| pending | ✅ OK | 45.00ms | — |
| debug | ✅ OK | 30.00ms | — |
| epochs | ❌ FAILED | 10.00ms | failed to read epoch directory |

**Fatal errors**

- epochs: failed to read epoch directory

---
