crates/agglayer/src/snapshots/agglayer__migrate_report__tests__migration_report_markdown_per_store_diagnostics_warning.snap
---
source: crates/agglayer/src/migrate_report.rs
expression: render_markdown(&o)
---
## mainnet

Migration run at 2024-01-15 12:31:36 UTC, total 1.23s. Status: **OK**.

| Store | Status | Duration | Notes |
|---|---|---:|---|
| state | ✅ OK | 120.00ms | — |
| pending | ⚠️ INCOMPLETE | 45.00ms | diagnostics failed: pending scan failed |
| debug | ✅ OK | 30.00ms | — |
| epochs | ✅ OK | 800.00ms | 5 processed; 5 OK; 0 failed |

**Diagnostics warnings**

- pending: pending scan failed

---
